Fix missing checks in stdlib test suite

--- a/.gitignore
+++ b/.gitignore
@@ -97,6 +97,7 @@ test-suite/Datatypes.mli
 test-suite/bug_10796.ml
 test-suite/bug_10796.mli
 test-suite/**/*.time
+stdlib/test-suite/**/*.time
 
 # `nix build` (through flake) symlink
 result
