--- a/topbin/dune
+++ b/topbin/dune
@@ -56,16 +56,16 @@
 
 ; Workers
 (executable
- (name coqworker)
- (modules coqworker)
+ (name rocqworker)
+ (modules rocqworker)
  (modes exe byte)
  (libraries rocq-runtime.toplevel))
  ; Adding -ccopt -flto to links options could be interesting, however,
  ; it doesn't work on Windows
 
 (executable
- (name coqworker_with_drop)
- (modules coqworker_with_drop)
+ (name rocqworker_with_drop)
+ (modules rocqworker_with_drop)
  (modes byte)
  (libraries compiler-libs.toplevel rocq-runtime.config.byte rocq-runtime.toplevel rocq-runtime.dev findlib.top))
 
@@ -73,7 +73,7 @@
  (section libexec)
  (package rocq-runtime)
  (files
-  (coqworker.exe as coqworker)
-  (coqworker.bc as coqworker.byte)
-  (coqworker_with_drop.bc as coqworker_with_drop)
+  (rocqworker.exe as rocqworker)
+  (rocqworker.bc as rocqworker.byte)
+  (rocqworker_with_drop.bc as rocqworker_with_drop)
   (rocqnative.exe as rocqnative)))
