Stop reading env var COQ_CONFIGURE_PREFIX
Discussion in https://github.com/coq/coq/pull/15459 indicates that it
didn't work in opam (which is why we stopped using it), and with the
renaming we want to stop reading COQ* env vars when possible.

--- a/config/dune
+++ b/config/dune
@@ -36,6 +36,6 @@
    %{project_root}/dev/header.c
    ; Needed to generate include lists for coq_makefile
    plugin_list
-  (env_var PWD) ; used in the fallback of COQ_CONFIGURE_PREFIX
-  (env_var COQ_CONFIGURE_PREFIX))
+  ; used for the prefix
+  (env_var PWD))
  (action (chdir %{project_root} (run %{project_root}/tools/configure/configure.exe -no-ask))))
