--- a/man/dune
+++ b/man/dune
@@ -1,5 +1,10 @@
 (install
  (section man)
+ (package rocq-runtime)
+ (files rocq.1 rocqchk.1))
+
+(install
+ (section man)
  (package coq-core)
  (files coqc.1 coqtop.1 coqtop.byte.1 coqchk.1 coqdep.1 coqdoc.1 coq_makefile.1 coq-tex.1 coqwc.1 coqnative.1))
 
