--- a/stdlib/dune-project
+++ b/stdlib/dune-project
@@ -1,5 +1,5 @@
 (lang dune 3.8)
-(name coq-stdlib)
+(name rocq-stdlib)
 
 ; We use directory targets in documentation
 (using directory-targets 0.1)
@@ -12,8 +12,8 @@
 (generate_opam_files true)
 
 (license LGPL-2.1-only)
-(maintainers "The Coq standard library development team")
-(authors "The Coq development team, INRIA, CNRS, and contributors")
+(maintainers "The Rocq standard library development team")
+(authors "The Rocq development team, INRIA, CNRS, and contributors")
 ; This generates bug-reports and dev-repo
 (source (github coq/coq))
 (homepage https://coq.inria.fr/)
@@ -21,13 +21,13 @@
 (version dev)
 
 (package
- (name coq-stdlib)
+ (name rocq-stdlib)
  (depends
   rocq-runtime
   (rocq-core (= :version)))
  (depopts rocq-native)
- (synopsis "The Coq Proof Assistant -- Standard Library")
- (description "Coq is a formal proof management system. It provides
+ (synopsis "The Rocq Proof Assistant -- Standard Library")
+ (description "Rocq is a formal proof management system. It provides
 a formal language to write mathematical definitions, executable
 algorithms and theorems together with an environment for
 semi-interactive development of machine-checked proofs.
@@ -38,17 +38,26 @@ project, or the Bedrock verified low-level programming library), the
 formalization of mathematics (e.g. the full formalization of the
 Feit-Thompson theorem or homotopy type theory) and teaching.
 
-This package includes the Coq Standard Library, that is to say, the
+This package includes the Rocq Standard Library, that is to say, the
 set of modules usually bound to the Stdlib.* namespace."))
 
 (package
- (name coq-stdlib-doc)
+ (name coq-stdlib)
+ (allow_empty)
+ (depends
+  coq-core
+  (rocq-stdlib (= :version)))
+ (depopts coq-native)
+ (synopsis "Compatibility metapackage for Coq Stdlib library after the Rocq renaming"))
+
+(package
+ (name rocq-stdlib-doc)
  (license "OPUBL-1.0")
  (depends
   (conf-python-3 :build)
-  (coq (and :build (= :version))))
- (synopsis "The Coq Proof Assistant Standard Library --- Reference Manual")
- (description "Coq is a formal proof management system. It provides
+  (rocq (and :build (= :version))))
+ (synopsis "The Rocq Proof Assistant Standard Library --- Reference Manual")
+ (description "Rocq is a formal proof management system. It provides
 a formal language to write mathematical definitions, executable
 algorithms and theorems together with an environment for
 semi-interactive development of machine-checked proofs.
