--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -243,14 +243,15 @@ before_script:
     - if [ "$ROCQ_CI_NATIVE" = true ]; then opam install -y rocq-native; fi
     - opam pin add --kind=path rocq-runtime.dev .
     - opam pin add --kind=path rocq-core.dev .
-    - opam pin add --kind=path coq-stdlib.dev stdlib/
-    - if command -v coqc; then exit 1; fi # coq-core didn't get autoinstalled
-    - opam pin add --kind=path coqide-server.dev .
-    - opam pin add --kind=path coqide.dev .
+    - opam pin add --kind=path rocq-stdlib.dev stdlib/
     - if [ "$ROCQ_CI_NATIVE" = true ]; then echo "Definition f x := x + x." > test_native.v; fi
     - if [ "$ROCQ_CI_NATIVE" = true ]; then rocq c test_native.v; fi
     - if [ "$ROCQ_CI_NATIVE" = true ]; then test -f .coq-native/Ntest_native.cmxs; fi
+    - if command -v coqc; then exit 1; fi # coq-core didn't get autoinstalled
     - opam pin add --kind=path coq-core.dev .
+    - opam pin add --kind=path coq-stdlib.dev stdlib/
+    - opam pin add --kind=path coqide-server.dev .
+    - opam pin add --kind=path coqide.dev .
   after_script:
     - eval $(opam env)
     - du -ha "$(coqc -where)" > files.listing
